# ddlview

./: Cargo.toml  README.md
crates/s3util/: Cargo.toml
crates/s3util/src/: lib.rs
crates/s3util/src/aws/: mod.rs
crates/s3util/src/aws/s3/: client.rs  util.rs
crates/s3util/src/aws/util/: client.rs
ddlviewer/: Cargo.toml
ddlviewer/src/: errors.rs  lib.rs  main.rs
ddlviewer/src/command/: head.rs  mod.rs  schema.rs  sql.rs
ddlviewer/src/util/: mod.rs
