[workspace]
resolver = "2"
members = ["crates/*", "ddlviewer"]

default-members = ["crates/*"]

[workspace.dependencies]
aws-config = "1.5.3"
aws-sdk-s3 = { version = "1.41.0" }
polars = { version = "0.41.3", features = [
    "lazy",
    "cloud",
    "aws",
    "parquet",
    "partition_by",
    "rank",
    "strings",
    "sql",
] }
once_cell = "1.19.0"
rayon = "1.10.0"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
thiserror = { version = "1.0.63" }
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
tracing = "0.1.40"
bytes = "1.5.0"
dyn-fmt = { version = "0.4.0" }
log = "0.4.22"
env_logger = "0.11.4"
serde = { version = "1.0.203", features = ["derive"] }
s3util = { version = "0.1.0", path = "crates/s3util", default-features = false }

[profile.release]
codegen-units = 4
strip = "debuginfo"
opt-level = 3
lto = "fat"
